--- a/project_02/index.html
+++ b/project_02/index.html
@@ -167,5 +167,129 @@
         </div>
       </div>
     </section>
+    <!-- SECTION SOBRE -->
+    <section class="w-full px-4 py-8 sm:py-11">
+      <div
+        class="mx-auto max-w-7xl w-full grid grid-cols-1 gap-12 md:grid-cols-3"
+      >
+        <article class="flex flex-col gap-4">
+          <i class="fa fa-users" style="font-size: 32px"></i>
+          <h2 class="font-bold text-xl">Quem somos</h2>
+          <p class="">
+            Find out how we started, what drives us, and how we’re reimagining
+            how the world moves.
+          </p>
+          <a
+            href="#"
+            class="mt-3 border-b-2 self-start text-gray-600 hover:text-black hover:border-gray-400 duration-300"
+          >
+            Saiba mais sobre a Uber
+          </a>
+        </article>
+
+        <article class="flex flex-col gap-4">
+          <i class="fa fa-clipboard" style="font-size: 32px"></i>
+          <h2 class="font-bold text-xl">Newsroom</h2>
+          <p class="">
+            Confira as notícias mais recentes sobre lançamentos, iniciativas e
+            parcerias
+          </p>
+          <a
+            href="#"
+            class="mt-3 border-b-2 self-start text-gray-600 hover:text-black hover:border-gray-400 duration-300"
+          >
+            Acesse o Newsroom
+          </a>
+        </article>
+
+        <article class="flex flex-col gap-4">
+          <i class="fa fa-home" style="font-size: 32px"></i>
+          <h2 class="font-bold text-xl">Cidadania Global</h2>
+          <p class="">
+            Leia sobre nosso compromisso de gerar um impacto positivo nas
+            cidades que atendemos.
+          </p>
+          <a
+            href="#"
+            class="mt-3 border-b-2 self-start text-gray-600 hover:text-black hover:border-gray-400 duration-300"
+          >
+            See our partnerships
+          </a>
+        </article>
+      </div>
+    </section>
+    <!-- SECTION APP -->
+    <section class="w-full px-4 py-8 sm:py-11 bg-gray-300">
+      <div class="w-full max-w-7xl mx-auto flex flex-col gap-4">
+        <h2 class="font-bold text-2xl">É mais fácil pelo app</h2>
+        <div class="w-full flex flex-col gap-4 md:flex-row">
+          <a
+            href="#"
+            class="w-full flex items-center justify-between border-2 border-slate-400 px-4 py-4 bg-white hover:shadow-lg duration-300 cursor-pointer"
+          >
+            <div class="flex items-center">
+              <img
+                src="./assets/images/qrcode1.png"
+                alt="QRCode 1"
+                class="hidden md:flex w-1/3 mr-4"
+              />
+              <div class="">
+                <h3 class="font-bold text-lg md:text-2xl">
+                  Baixe o app da Uber
+                </h3>
+                <span class="hidden md:block text-gray-700"
+                  >Leia o código QR para baixar o app</span
+                >
+              </div>
+            </div>
+
+            <i class="fa fa-chevron-right" style="font-size: 24px"></i>
+          </a>
+
+          <a
+            href="#"
+            class="w-full flex items-center justify-between border-2 border-slate-400 px-4 py-4 bg-white hover:shadow-lg duration-300 cursor-pointer"
+          >
+            <div class="flex items-center">
+              <img
+                src="./assets/images/qrcode2.png"
+                alt="QRCode 2"
+                class="hidden md:flex w-1/3 mr-4"
+              />
+              <div class="">
+                <h3 class="font-bold text-lg md:text-2xl">
+                  Baixe o app de Parceiro
+                </h3>
+                <span class="hidden md:block text-gray-700"
+                  >Leia o código QR para baixar o app</span
+                >
+              </div>
+            </div>
+
+            <i class="fa fa-chevron-right" style="font-size: 24px"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- SECTION CADASTROS -->
+    <section class="w-full px-4 py-8 sm:py-11">
+      <div
+        class="w-full max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-between gap-6"
+      >
+        <div class="flex-1 w-full flex items-center justify-between">
+          <h2 class="text-2xl md:text-4xl font-bold">
+            Cadastre-se para Viajar
+          </h2>
+          <i class="fa fa-chevron-right" style="font-size: 36px"></i>
+        </div>
+
+        <div class="flex-1 w-full flex items-center justify-between">
+          <h2 class="text-2xl md:text-4xl font-bold">
+            Cadastre-se para Dirigir
+          </h2>
+          <i class="fa fa-chevron-right" style="font-size: 36px"></i>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
